From My Macbook Pro

--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
-DATABRICKS_SERVER_HOSTNAME=e2-demo-field-eng.cloud.databricks.com
-DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/475b94ddc7cd5211
-DATABRICKS_TOKEN=dapi3d713c2f18f0689beb57101a1e3df857
+DATABRICKS_SERVER_HOSTNAME=
+DATABRICKS_HTTP_PATH=
+DATABRICKS_TOKEN=
 DATABRICKS_CATALOG=main
 DATABRICKS_SCHEMA=dash_observability_advisor
