Alert AI Manager

--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
-DATABRICKS_SERVER_HOSTNAME=
-DATABRICKS_HTTP_PATH=
-DATABRICKS_TOKEN=
+DATABRICKS_SERVER_HOSTNAME=<warehouse_host>
+DATABRICKS_HTTP_PATH=<warehouse_http_path>
+DATABRICKS_TOKEN=<token>
 DATABRICKS_CATALOG=main
 DATABRICKS_SCHEMA=dash_observability_advisor
